--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.460.0",
     "mongoose": "^8.7.0",
+    "nodemailer": "^7.0.11",
     "next": "14.2.9",
     "next-auth": "^5.0.0-beta.25",
     "next-seo": "^6.6.0",
