--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.460.0",
     "mongoose": "^8.7.0",
-    "nodemailer": "^7.0.11",
     "next": "14.2.9",
     "next-auth": "^5.0.0-beta.25",
     "next-seo": "^6.6.0",
+    "nodemailer": "^7.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sonner": "^1.5.0",
@@ -34,6 +34,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.11.30",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
     "autoprefixer": "^10.4.20",
