--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "ts-node --transpile-only scripts/seed.ts"
+    "seed": "ts-node --transpile-only --project tsconfig.scripts.json scripts/seed.ts",
+    "clear-db": "ts-node --transpile-only --project tsconfig.scripts.json scripts/clear-db.ts",
+    "check-db": "ts-node --transpile-only --project tsconfig.scripts.json scripts/check-db.ts"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.7",
@@ -38,6 +40,7 @@
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^17.2.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.9",
     "postcss": "^8.4.47",
