--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "next-auth": "^5.0.0-beta.25",
     "next-seo": "^6.6.0",
     "nodemailer": "^7.0.11",
+    "quill": "^2.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-quill": "^2.0.0",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "zod": "^3.23.8",
