--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check-db": "ts-node --transpile-only --project tsconfig.scripts.json scripts/check-db.ts"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.59.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
